--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express-validator": "^6.11.1",
     "fs-extra": "^10.0.0",
     "http-error": "0.0.6",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "uniqid": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
